Got some Ajax+Pure+Webmachine going.

--- a/priv/dispatch.conf
+++ b/priv/dispatch.conf
@@ -1,4 +1,6 @@
-{[], tt_resource, []}.
-{['assets','*'], tt_file_resource, []}.
+{[],               tt_resource,        []}.
+{["assets",'*'],   tt_file_resource,   []}.
+{["data",what],    tt_data_resource,   []}.
+
 
 
