Experimenting with Multiple IP-Port setup.
This requires a patched webmachine, e.g:

  http://bitbucket.org/etnt/webmachine/

--- a/priv/dispatch.conf
+++ b/priv/dispatch.conf
@@ -1,6 +1,14 @@
-{[],               tt_resource,        []}.
-{["assets",'*'],   tt_file_resource,   []}.
-{["data",what],    tt_data_resource,   []}.
+{{["localhost"],8100},
+ [{[],               tt_resource,        []},
+  {["assets",'*'],   tt_file_resource,   []},
+  {["data",what],    tt_data_resource,   []}
+ ]}.
+{{["localhost"],8200},
+ [{[],               tt_resource,        []},
+  {["assets",'*'],   tt_file_resource,   []},
+  {["data",what],    tt_data_resource,   []}
+ ]}.
+
 
 
 
