Match resource added. Data resource removed since it wasn't actually a REST resource. Matches page added: it shows a list of the last 50 games played sorted by date

--- a/priv/dispatch.conf
+++ b/priv/dispatch.conf
@@ -1,14 +1,14 @@
 {{["localhost"],8100},
- [{[],               tt_resource,        []},
-  {["assets",'*'],   tt_file_resource,   []},
-  {["data",what],    tt_data_resource,   []},
-  {["users",'*'],    tt_users_resource,	 []}
+ [{[],               tt_resource,		[]},
+  {["assets",'*'],   tt_file_resource,		[]},
+  {["matches",'*'],  tt_matches_resource,	[]},
+  {["users",'*'],    tt_users_resource,	 	[]}
  ]}.
 {{["localhost"],8200},
- [{[],               tt_resource,        []},
-  {["assets",'*'],   tt_file_resource,   []},
-  {["data",what],    tt_data_resource,   []},
-  {["users",'*'],    tt_users_resource,	 []}
+ [{[],               tt_resource,		[]},
+  {["assets",'*'],   tt_file_resource,   	[]},
+  {["matches",'*'],  tt_matches_resource,   	[]},
+  {["users",'*'],    tt_users_resource,	 	[]}
  ]}.
 
 
